# djangoblog

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
djangoblog/blog/: models.py  urls.py  views.py
djangoblog/blog/migrations/: 0001_initial.py
djangoblog/blog/static/blog/: main.css  output.css
djangoblog/blog/templates/blog/: base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  user_posts.html
djangoblog/django_project/: settings.py  urls.py
djangoblog/djangoblog/: asgi.py  settings.py  urls.py  wsgi.py
djangoblog/users/: apps.py  forms.py  models.py  signals.py  views.py
djangoblog/users/migrations/: 0001_initial.py
djangoblog/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
